# open_spiel

./: pyproject.toml
notebook/: explore_rashambow.ipynb
open_spiel/python/examples/: roshambo_population_example.py
open_spiel/scripts/: global_variables.sh
